[package]
name = "audit"
version = "0.1.0"
authors = ["Alexej Kowalew <616b2f@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
structopt = "0.3"
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.3.1"
jsonpath = "0.1.1"
serde_json = "1.0.53"
jsonpath_lib = "0.2.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
colored = "1.9.3"
