[package]
name = "audit"
version = "0.1.0"
authors = ["Alexej Kowalew <616b2f@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tool to look up CVEs of your project dependencies"
readme = "README.md"
repository = "https://github.com/616b2f/audit-rs"
keywords = ["cli", "audit", "vulnerability", "scanner", "cve"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"

structopt = "0.3"
clap-verbosity-flag = "0.3.1"
colored = "1.9.3"

serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.3.1"
jsonpath = "0.1.1"
serde_json = "1.0.53"
jsonpath_lib = "0.2.5"

reqwest = { version = "0.10", features = ["blocking", "json"] }
